Worked on Homotopy Chapter

--- a/src/definitions/parts/math.tex
+++ b/src/definitions/parts/math.tex
@@ -167,3 +167,13 @@
 \newcommand{\eps} {
     \varepsilon{}
 }
+
+\newcommand{\cyl}[1] {
+    #1 \times{} [0, 1]
+}
+\newcommand{\cylup}[1] {
+    #1 \times{} \{1\}
+}
+\newcommand{\cyldown}[1] {
+    #1 \times{} \{0\}
+}
