Refactored defines and abstracted math commands acroos all files

--- a/src/defines/parts/env.tex
+++ b/src/defines/parts/env.tex
@@ -1,85 +1,83 @@
-% Break
-\newcommand{\blankbreak}{%
-  $ $\\
-}
-
-% Scope
+% scope
 \newenvironment{scope}{}{}
 
-% Statement
+% statement
 \newtheorem{statement}{}
 \numberwithin{statement}{chapter}
-% Statement :: Definition
+% statement :: Definition
 \theoremstyle{definition}
 \newtheorem{definition}[statement]{Definition}
-% Statement :: Theorem
+% statement :: Theorem
 \theoremstyle{plain}
 \newtheorem{theorem}[statement]{Theorem}
-% Statement :: Proposition
+% statement :: Proposition
 \theoremstyle{plain}
 \newtheorem{proposition}[statement]{Proposition}
-% Statement :: Corollary
+% statement :: Corollary
 \theoremstyle{plain}
 \newtheorem{corollary}[statement]{Corollary}
-% Statement :: Lemma
+% statement :: Lemma
 \theoremstyle{plain}
 \newtheorem{lemma}[statement]{Lemma}
-% Statement :: Remark
+% statement :: Remark
 \theoremstyle{remark}
 \newtheorem{remark}[statement]{Remark}
-% Statement :: Example
+% statement :: Example
 \theoremstyle{definition}
 \newtheorem{example}[statement]{Example}
 
-% MyParagraph
+% break
+\newcommand{\blankbreak}{$ $\\}
+
+% myparagraph
 \newenvironment{myparagraph}{%
   \hspace{\parindent}%
 } {%
-
+  
 }
-% MyDefinition
+% mydefinition
 \newenvironment{mydefinition}[2][]{%
-  \begin{definition}[#1]\label{#2}\blankbreak{}
-} {
-  \end{definition}
+  \begin{definition}[#1]\label{#2}\blankbreak{}%
+} {%
+  \end{definition}%
 }
-% MyTheorem
+% mytheorem
 \newenvironment{mytheorem}[2][]{%
   \begin{theorem}[#1]\label{#2}\blankbreak{}%
 } {%
   \end{theorem}%
 }
-% MyProposition
+% myproposition
 \newenvironment{myproposition}[2][]{%
   \begin{proposition}[#1]\label{#2}\blankbreak{}%
 } {%
   \end{proposition}%
 }
-% MyCorollary
+% mycorollary
 \newenvironment{mycorollary}[2][]{%
   \begin{corollary}[#1]\label{#2}\blankbreak{}%
 } {%
   \end{corollary}%
 }
-% MyLemma
+% mylemma
 \newenvironment{mylemma}[2][]{%
   \begin{lemma}[#1]\label{#2}\blankbreak{}%
 } {%
   \end{lemma}%
 }
-% MyRemark
+% myremark
 \newenvironment{myremark}[2][]{%
   \begin{remark}[#1]\label{#2}\blankbreak{}%
 } {%
   \end{remark}%
 }
-% MyExample
+% myexample
 \newenvironment{myexample}[2][]{%
   \begin{example}[#1]\label{#2}\blankbreak{}%
 } {%
   \end{example}%
 }
-% MyProof
+% myproof
 \newenvironment{myproof}[1][]{%
   \ifthenelse{\equal{#1}{}} {%
     \begin{proof}\blankbreak{}%
