--- a/src/defines/parts/text.tex
+++ b/src/defines/parts/text.tex
@@ -1,10 +1,8 @@
-% Definition Term
+% define
 \newcommand{\defterm}[1] {%
     \emph{#1}%
 }
-\newcommand{\parttitle}[1] {%
-    \textnormal{(#1)}%
-}
+% reference
 \newcommand{\intref}[1] {%
     \Cref{#1}%
 }
