--- a/thesis.tex
+++ b/thesis.tex
@@ -2,7 +2,8 @@
 % Packages
 \input{src/packages}
 % Global Definitions
-\input{src/definitions/global}
+\input{src/defines/global}
+
 % Document
 \begin{document}
 % Document :: Titlepage
