Worked on Suspension Chapter

--- a/src/defines/parts/math.tex
+++ b/src/defines/parts/math.tex
@@ -106,10 +106,10 @@
     #1 \times{} \I%
 }
 \newcommand{\cylup}[1] {%
-    #1 \times{} \I%
+    #1 \times{} \{1\}%
 }
 \newcommand{\cyldown}[1] {%
-    #1 \times{} \I%
+    #1 \times{} \{0\}%
 }
 
 % intern
