Worked on TODO sections

--- a/src/defines/parts/microbundle.tex
+++ b/src/defines/parts/microbundle.tex
@@ -19,8 +19,8 @@
     \mathfrak{d}%
 }
 % bundle :: trivial
-\newcommand{\be}[1][n] {%
-    \mathfrak{e}^{#1}%
+\newcommand{\be}[2][n] {%
+    \mathfrak{e}^{#1}_{#2}
 }
 % bundle :: tangent
 \newcommand{\bt} {%
