--- a/src/defines/parts/env.tex
+++ b/src/defines/parts/env.tex
@@ -36,44 +36,72 @@
   
 }
 % mydefinition
-\newenvironment{mydefinition}[2][]{%
-  \begin{definition}[#1]\label{#2}\blankbreak{}%
+\newenvironment{mydefinition}[3][]{%
+  \ifthenelse{\equal{#3}{}} {%
+    \begin{definition}[#1]\label{#2}\blankbreak{}%
+  } {%
+    \begin{definition}[#1]\label{#2}\ref{#3}\blankbreak{}%
+  }%
 } {%
   \end{definition}%
 }
 % mytheorem
-\newenvironment{mytheorem}[2][]{%
-  \begin{theorem}[#1]\label{#2}\blankbreak{}%
+\newenvironment{mytheorem}[3][]{%
+  \ifthenelse{\equal{#3}{}} {%
+    \begin{theorem}[#1]\label{#2}\blankbreak{}%
+  } {%
+    \begin{theorem}[#1]\label{#2}\ref{#3}\blankbreak{}%
+  }%
 } {%
   \end{theorem}%
 }
 % myproposition
-\newenvironment{myproposition}[2][]{%
-  \begin{proposition}[#1]\label{#2}\blankbreak{}%
+\newenvironment{myproposition}[3][]{%
+  \ifthenelse{\equal{#3}{}} {%
+    \begin{proposition}[#1]\label{#2}\blankbreak{}%
+  } {%
+    \begin{proposition}[#1]\label{#2}\ref{#3}\blankbreak{}%
+  }%
 } {%
   \end{proposition}%
 }
 % mycorollary
-\newenvironment{mycorollary}[2][]{%
-  \begin{corollary}[#1]\label{#2}\blankbreak{}%
+\newenvironment{mycorollary}[3][]{%
+  \ifthenelse{\equal{#3}{}} {%
+    \begin{corollary}[#1]\label{#2}\blankbreak{}%
+  } {%
+    \begin{corollary}[#1]\label{#2}\ref{#3}\blankbreak{}%
+  }%
 } {%
   \end{corollary}%
 }
 % mylemma
-\newenvironment{mylemma}[2][]{%
-  \begin{lemma}[#1]\label{#2}\blankbreak{}%
+\newenvironment{mylemma}[3][]{%
+  \ifthenelse{\equal{#3}{}} {%
+    \begin{lemma}[#1]\label{#2}\blankbreak{}%
+  } {%
+    \begin{lemma}[#1]\label{#2}\ref{#3}\blankbreak{}%
+  }%
 } {%
   \end{lemma}%
 }
 % myremark
-\newenvironment{myremark}[2][]{%
-  \begin{remark}[#1]\label{#2}\blankbreak{}%
+\newenvironment{myremark}[3][]{%
+  \ifthenelse{\equal{#3}{}} {%
+    \begin{remark}[#1]\label{#2}\blankbreak{}%
+  } {%
+    \begin{remark}[#1]\label{#2}\ref{#3}\blankbreak{}%
+  }%
 } {%
   \end{remark}%
 }
 % myexample
-\newenvironment{myexample}[2][]{%
-  \begin{example}[#1]\label{#2}\blankbreak{}%
+\newenvironment{myexample}[3][]{%
+  \ifthenelse{\equal{#3}{}} {%
+    \begin{example}[#1]\label{#2}\blankbreak{}%
+  } {%
+    \begin{example}[#1]\label{#2}\ref{#3}\blankbreak{}%
+  }%
 } {%
   \end{example}%
 }
