read over Introduction, Microbundle and Induced(not finished) Chapter

--- a/src/defines/parts/env.tex
+++ b/src/defines/parts/env.tex
@@ -37,6 +37,7 @@
 }
 % mydefinition
 \newenvironment{mydefinition}[3][]{%
+  \begin{leftbar}%
   \ifthenelse{\equal{#3}{}} {%
     \begin{definition}[#1]\label{#2}\blankbreak{}%
   } {%
@@ -44,6 +45,7 @@
   }%
 } {%
   \end{definition}%
+  \end{leftbar}%
 }
 % mytheorem
 \newenvironment{mytheorem}[3][]{%
