--- a/src/titlepage.tex
+++ b/src/titlepage.tex
@@ -13,7 +13,7 @@
 
         % Subtitle
         \LARGE
-        based on Milnor's studies on Microbundles
+        based on J. Milnors studies on microbundles
 
         \vspace{1.5cm} % spacing
 
