--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -58,7 +58,7 @@
     such that there doesn't exist a normal microbundle.
 
     However, Milnor shows that one can always find a normal microbundle
-    of the submanifold $P$ in a tubular space $M \times \R^q$
+    of the submanifold $P$ in a tubular space $M \cross \R^q$
     for a sufficiently large $q \in \N$.
 
     Proving this statement while presenting the concept of
