--- a/src/defines/parts/env.tex
+++ b/src/defines/parts/env.tex
@@ -1,3 +1,6 @@
+% break
+\newcommand{\blankbreak}{$ $\\}
+
 % scope
 \newenvironment{scope}{}{}
 
@@ -26,94 +29,69 @@
 \theoremstyle{definition}
 \newtheorem{example}[statement]{Example}
 
-% break
-\newcommand{\blankbreak}{$ $\\}
-
 % myparagraph
-\newenvironment{myparagraph}{%
-  \hspace{\parindent}%
-} {%
-  
-}
-% mydefinition
-\newenvironment{mydefinition}[3][]{%
-  \begin{leftbar}%
-  \ifthenelse{\equal{#3}{}} {%
-    \begin{definition}[#1]\label{#2}\blankbreak{}%
-  } {%
-    \begin{definition}[#1]\label{#2}\ref{#3}\blankbreak{}%
+\newenvironment{myparagraph}{\hspace{\parindent}}{}
+
+% mystatement
+\NewDocumentEnvironment{mystatement}{momo}{%
+  % leftbar
+  \begin{leftbar}
+  % begin
+  \ifthenelse{\equal{#1}{definition}}{%
+    \IfValueTF{#2}{\begin{definition}[#2]}{\begin{definition}}%
+  }{}%
+  \ifthenelse{\equal{#1}{theorem}}{%
+    \IfValueTF{#2}{\begin{theorem}[#2]}{\begin{theorem}}%
+  }{}%
+  \ifthenelse{\equal{#1}{proposition}}{%
+    \IfValueTF{#2}{\begin{proposition}[#2]}{\begin{proposition}}%
+  }{}%
+  \ifthenelse{\equal{#1}{corollary}}{%
+    \IfValueTF{#2}{\begin{corollary}[#2]}{\begin{corollary}}%
+  }{}%
+  \ifthenelse{\equal{#1}{lemma}}{%
+    \IfValueTF{#2}{\begin{lemma}[#2]}{\begin{lemma}}%
+  }{}%
+  \ifthenelse{\equal{#1}{remark}}{%
+    \IfValueTF{#2}{\begin{remark}[#2]}{\begin{remark}}%
+  }{}%
+  \ifthenelse{\equal{#1}{example}}{%
+    \IfValueTF{#2}{\begin{example}[#2]}{\begin{example}}%
+  }{}%
+  % label
+  \label{#3}%
+  % reference
+  \IfValueTF{#4} {%
+    \extref{#4}%
   }%
+  % break
+  \blankbreak{}%
 } {%
-  \end{definition}%
-  \end{leftbar}%
+  % end
+  \ifthenelse{\equal{#1}{definition}}{\end{definition}}{}%
+  \ifthenelse{\equal{#1}{theorem}}{\end{theorem}}{}%
+  \ifthenelse{\equal{#1}{proposition}}{\end{proposition}}{}%
+  \ifthenelse{\equal{#1}{corollary}}{\end{corollary}}{}%
+  \ifthenelse{\equal{#1}{lemma}}{\end{lemma}}{}%
+  \ifthenelse{\equal{#1}{remark}}{\end{remark}}{}%
+  \ifthenelse{\equal{#1}{example}}{\end{example}}{}%
+  % space
+  \vspace{2.5pt}
+  % leftbar
+  \end{leftbar}
 }
-% mytheorem
-\newenvironment{mytheorem}[3][]{%
-  \ifthenelse{\equal{#3}{}} {%
-    \begin{theorem}[#1]\label{#2}\blankbreak{}%
-  } {%
-    \begin{theorem}[#1]\label{#2}\ref{#3}\blankbreak{}%
-  }%
-} {%
-  \end{theorem}%
-}
-% myproposition
-\newenvironment{myproposition}[3][]{%
-  \ifthenelse{\equal{#3}{}} {%
-    \begin{proposition}[#1]\label{#2}\blankbreak{}%
-  } {%
-    \begin{proposition}[#1]\label{#2}\ref{#3}\blankbreak{}%
-  }%
-} {%
-  \end{proposition}%
-}
-% mycorollary
-\newenvironment{mycorollary}[3][]{%
-  \ifthenelse{\equal{#3}{}} {%
-    \begin{corollary}[#1]\label{#2}\blankbreak{}%
-  } {%
-    \begin{corollary}[#1]\label{#2}\ref{#3}\blankbreak{}%
-  }%
-} {%
-  \end{corollary}%
-}
-% mylemma
-\newenvironment{mylemma}[3][]{%
-  \ifthenelse{\equal{#3}{}} {%
-    \begin{lemma}[#1]\label{#2}\blankbreak{}%
-  } {%
-    \begin{lemma}[#1]\label{#2}\ref{#3}\blankbreak{}%
-  }%
-} {%
-  \end{lemma}%
-}
-% myremark
-\newenvironment{myremark}[3][]{%
-  \ifthenelse{\equal{#3}{}} {%
-    \begin{remark}[#1]\label{#2}\blankbreak{}%
-  } {%
-    \begin{remark}[#1]\label{#2}\ref{#3}\blankbreak{}%
-  }%
-} {%
-  \end{remark}%
-}
-% myexample
-\newenvironment{myexample}[3][]{%
-  \ifthenelse{\equal{#3}{}} {%
-    \begin{example}[#1]\label{#2}\blankbreak{}%
-  } {%
-    \begin{example}[#1]\label{#2}\ref{#3}\blankbreak{}%
-  }%
-} {%
-  \end{example}%
-}
+
 % myproof
-\newenvironment{myproof}[1][]{%
-  \ifthenelse{\equal{#1}{}} {%
-    \begin{proof}\blankbreak{}%
+\NewDocumentEnvironment{myproof}{o}{%
+  % begin
+  \IfValueTF{#1}{%
+    \begin{proof}[Proof #1.]%
   } {%
-    \begin{proof}[Proof #1.]\blankbreak{}%
+    \begin{proof}%
   }
+  % break
+  \blankbreak{}%
 } {%
+  % end
   \end{proof}%
 }
