--- a/src/defines/parts/math.tex
+++ b/src/defines/parts/math.tex
@@ -42,9 +42,10 @@
 \newcommand{\coll}[1] {%
     \{#1\}%
 }
-\newcommand{\cmpl}[1] {%
-    #1^c%
-}
+% set :: operation
+\newcommand{\cross}{\times}
+\newcommand{\cmpl}[1]{#1^c}
+% set :: subset
 \newcommand{\sub} {%
     \subseteq{}%
 }
@@ -63,18 +64,10 @@
     \vert{} #1 \vert{}%
 }
 % calculus :: ball
-\NewDocumentCommand{\ball} {% 
-    O{1} O{0}%
-} {%
-    \ifthenelse{\equal{#2}{0}} {%
-        B_{#1} (0)%
-    } {%
-        B_{#1} (#2)%
-    }%
+\NewDocumentCommand{\ball}{O{1}O{0}}{%
+    B_{#1} (0)%
 }
-\NewDocumentCommand{\clball} {%
-    O{1} O{0}%
-} {%
+\NewDocumentCommand{\clball}{O{1}O{0}}{%
     \overline{\ball[#1][#2]}%
 }
 
@@ -103,13 +96,13 @@
 }
 % interval :: cylinder
 \newcommand{\cyl}[1] {%
-    #1 \times{} \I%
+    #1 \cross{} \I%
 }
 \newcommand{\cylup}[1] {%
-    #1 \times{} \{1\}%
+    #1 \cross{} \{1\}%
 }
 \newcommand{\cyldown}[1] {%
-    #1 \times{} \{0\}%
+    #1 \cross{} \{0\}%
 }
 
 % intern
