changed commands and added reference support

--- a/src/defines/parts/text.tex
+++ b/src/defines/parts/text.tex
@@ -3,7 +3,7 @@
     \emph{#1}%
 }
 % reference
-\newcommand{\intref}[1] {%
+\newcommand{\myintref}[1] {%
     \Cref{#1}%
 }
 \newcommand{\extref}[1] {%
