--- a/src/packages.tex
+++ b/src/packages.tex
@@ -39,4 +39,13 @@
 \usepackage{graphicx}
 \graphicspath{{images/}}
 
-\setcounter{chapter}{-1}
+% \setcounter{chapter}{-1}
+\usepackage{emptypage}
+
+% \usepackage[
+% backend=biber,
+% style=alphabetic,
+% sorting=ynt
+% ]{biblatex}
+% \cref
+\usepackage{cite}
