refactored Induced Section

--- a/src/defines/parts/env.tex
+++ b/src/defines/parts/env.tex
@@ -34,51 +34,53 @@
 
 % mystatement
 \NewDocumentEnvironment{mystatement}{momo}{%
-  % leftbar
-  \begin{leftbar}
   % begin
   \ifthenelse{\equal{#1}{definition}}{%
+    \begin{leftbar}%
     \IfValueTF{#2}{\begin{definition}[#2]}{\begin{definition}}%
   }{}%
   \ifthenelse{\equal{#1}{theorem}}{%
+    \begin{leftbar}%
     \IfValueTF{#2}{\begin{theorem}[#2]}{\begin{theorem}}%
   }{}%
   \ifthenelse{\equal{#1}{proposition}}{%
+    \begin{leftbar}%
     \IfValueTF{#2}{\begin{proposition}[#2]}{\begin{proposition}}%
   }{}%
   \ifthenelse{\equal{#1}{corollary}}{%
+    \begin{leftbar}%
     \IfValueTF{#2}{\begin{corollary}[#2]}{\begin{corollary}}%
   }{}%
   \ifthenelse{\equal{#1}{lemma}}{%
+    \begin{leftbar}%
     \IfValueTF{#2}{\begin{lemma}[#2]}{\begin{lemma}}%
   }{}%
-  \ifthenelse{\equal{#1}{remark}}{%
+    \ifthenelse{\equal{#1}{remark}}{%
     \IfValueTF{#2}{\begin{remark}[#2]}{\begin{remark}}%
   }{}%
   \ifthenelse{\equal{#1}{example}}{%
+    \begin{leftbar}%
     \IfValueTF{#2}{\begin{example}[#2]}{\begin{example}}%
   }{}%
   % label
   \label{#3}%
   % reference
-  \IfValueTF{#4} {%
-    \extref{#4}%
+  \IfValueT{#4} {%
+    \cite[p.#4]{milnor}
   }%
   % break
   \blankbreak{}%
 } {%
-  % end
-  \ifthenelse{\equal{#1}{definition}}{\end{definition}}{}%
-  \ifthenelse{\equal{#1}{theorem}}{\end{theorem}}{}%
-  \ifthenelse{\equal{#1}{proposition}}{\end{proposition}}{}%
-  \ifthenelse{\equal{#1}{corollary}}{\end{corollary}}{}%
-  \ifthenelse{\equal{#1}{lemma}}{\end{lemma}}{}%
-  \ifthenelse{\equal{#1}{remark}}{\end{remark}}{}%
-  \ifthenelse{\equal{#1}{example}}{\end{example}}{}%
-  % space
+  % vspace
   \vspace{2.5pt}
-  % leftbar
-  \end{leftbar}
+  % end
+  \ifthenelse{\equal{#1}{definition}}{\end{definition}\end{leftbar}}{}%
+  \ifthenelse{\equal{#1}{theorem}}{\end{theorem}\end{leftbar}}{}%
+  \ifthenelse{\equal{#1}{proposition}}{\end{proposition}\end{leftbar}}{}%
+  \ifthenelse{\equal{#1}{corollary}}{\end{corollary}\end{leftbar}}{}%
+  \ifthenelse{\equal{#1}{lemma}}{\end{lemma}\end{leftbar}}{}%
+  \ifthenelse{\equal{#1}{remark}}{\end{remark}}{}%
+  \ifthenelse{\equal{#1}{example}}{\end{example}\end{leftbar}}{}%
 }
 
 % myproof
