--- a/src/sections/microbundle/parts/definition.tex
+++ b/src/sections/microbundle/parts/definition.tex
@@ -1,5 +1,5 @@
 % definition
-\begin{mystatement}{definition}[microbundle]{microbundle::definition}
+\begin{mystatement}{definition}[microbundle]{microbundle::definition}[20]
     A \defterm{microbundle} $\bb$ over $B$ (with \defterm{fibre dimension} $n$)
     is a diagram $\bundle{B}{E}{i}{j}$ satisfying the following:
     \begin{enumerate}[(i)]
