--- a/refs.bib
+++ b/refs.bib
@@ -1,31 +1,44 @@
-@book{dirac,
-  title     = {The Principles of Quantum Mechanics},
-  author    = {Paul Adrien Maurice Dirac},
-  isbn      = {9780198520115},
-  series    = {International series of monographs on physics},
-  year      = {1981},
-  publisher = {Clarendon Press},
-  keywords  = {physics}
+@book{brendon,
+  title     = {Topology and Geometry},
+  pages     = {1-557},
+  year      = {1993},
+  issn      = {0072-5285},
+  doi       = {https://doi.org/10.1007/978-1-4757-6848-0},
+  url       = {https://link.springer.com/book/10.1007/978-1-4757-6848-0},
+  author    = {Glen E. Bredon},
+  publisher = {Springer New York, NY}
 }
-
-@article{einstein,
-  author   = {Albert Einstein},
-  title    = {{Zur Elektrodynamik bewegter K{\"o}rper}. ({German})
-              [{On} the electrodynamics of moving bodies]},
-  journal  = {Annalen der Physik},
-  volume   = {322},
-  number   = {10},
-  pages    = {891--921},
-  year     = {1905},
-  doi      = {http://dx.doi.org/10.1002/andp.19053221004},
-  keywords = {physics}
+@book{lee,
+  title     = {Introduction to Smooth Manifolds},
+  pages     = {1-708},
+  year      = {2012},
+  issn      = {0072-5285},
+  doi       = {https://doi.org/10.1007/978-1-4419-9982-5},
+  url       = {https://link.springer.com/book/10.1007/978-1-4419-9982-5},
+  author    = {John M. Lee},
+  publisher = {Springer New York, NY}
 }
-
-@inbook{knuth-fa,
-  author    = {Donald E. Knuth},
-  title     = {Fundamental Algorithms},
-  publisher = {Addison-Wesley},
-  year      = {1973},
-  chapter   = {1.2},
-  keywords  = {knuth,programming}
+@article{milnor,
+  title   = {Microbundles: Part I},
+  journal = {Topology},
+  volume  = {3},
+  pages   = {53-80},
+  year    = {1964},
+  issn    = {0040-9383},
+  doi     = {https://doi.org/10.1016/0040-9383(64)90005-9},
+  url     = {https://www.sciencedirect.com/science/article/pii/0040938364900059},
+  author  = {J. Milnor}
+}
+@article{sanderson,
+  issn      = {0003486X},
+  url       = {http://www.jstor.org/stable/1970591},
+  author    = {C. P. Rourke and B. J. Sanderson},
+  journal   = {Annals of Mathematics},
+  number    = {1},
+  pages     = {1--28},
+  publisher = {Annals of Mathematics},
+  title     = {Block Bundles: I},
+  urldate   = {2024-06-05},
+  volume    = {87},
+  year      = {1968}
 }
