--- a/src/sections/induced/parts/simplex.tex
+++ b/src/sections/induced/parts/simplex.tex
@@ -1,9 +1,11 @@
 % foreword
 \begin{myparagraph}
-    We can easily follow a criteria on whether
-    one can extend a microbundle over a simplex
-    using the fact that the cone of the border
-    of a simplex is homeomorphic to the simplex itself.
+    We can follow a statement about extending a microbundle over a simplex
+    by utilizing that the cone of the boundary of a simplex 
+    is homeomorphic to the simplex itself.
+
+    This statement will be used to prove an
+    important theorem about `Whitney sums' later in this chapter.
 \end{myparagraph}
 
 % corollary
@@ -19,9 +21,9 @@
     it follows that there exists a microbundle $\bb'$ over $B' \cup_f C\partial\Delta$ extending $\bb$
     if and only if $\ind{f}\bb = \bb[\partial\Delta]$ is trivial.
 
-    Now, consider the homeomorphism $\phi: C\partial \Delta \isomto \Delta$ with
-    \[ \phi((t_1, \dots, t_{d + 1}), \lambda) := (1 - \lambda) (t_1, \dots, t_{d + 1}) + \frac{\lambda}{d + 1} (1, \dots, 1) \]
+    We have a homeomorphism $\phi: C\partial \Delta \isomto \Delta$ with
+    \[ \phi((t_1, \dots, t_{d + 1}), \lambda) := (1 - \lambda) (t_1, \dots, t_{d + 1}) + \frac{\lambda}{d + 1} (1, \dots, 1). \]
     In particular, $\phi(\partial \Delta \cross \{0\}) = \partial \Delta$.
 
-    It follows that $B' \cup_f C\Delta \cong B' \cup \Delta$ which concludes the proof.
+    It follows that $B' \cup_f C \partial\Delta \cong B' \cup \Delta$, which concludes the proof.
 \end{myproof}
