refactored Constructions and Microbundle

--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -34,7 +34,7 @@
 
     One can transfer many constructions and results for
     vector bundles over to microbundles,
-    for example the `whitney sum' or the `induced bundle'. 
+    for example the `Whitney sum' or the `induced bundle'. 
 
     Furthermore, one can also define a microbundle analogue
     to the normal bundle for smooth manifolds.
