--- a/src/sections/homotopy/parts/isomorphism.tex
+++ b/src/sections/homotopy/parts/isomorphism.tex
@@ -14,7 +14,7 @@
     already implies that $\bb$ and $\bb'$ are isomorphic.
     The answer is generally no, because isomorphy of microbundles additionally requires 
     the homeomorphism to commute with injection and projection maps.
-    Therefore, we need to assume an extra condition (`fibre-preservation')
+    Therefore, we need to assume an extra condition (`fiber-preservation')
     for this implication to be true.
     This justifies the following definition.
     
@@ -28,7 +28,7 @@
 \begin{mystatement}{definition}[isomorphism-germ]{homotopy::isomorphism}
     An \defterm{isomorphism-germ} between $\bb$ and $\bb'$ is a homeomorphism-germ 
     \[ \germdef{F}{(E, B)}{(E', B)} \]
-    which is \defterm{fibre-preserving}, that is $J' \circ F = J$.
+    which is \defterm{fiber-preserving}, that is $J' \circ F = J$.
 \end{mystatement}
 
 % remark
