--- a/src/sections/homotopy/parts/williamson.tex
+++ b/src/sections/homotopy/parts/williamson.tex
@@ -96,7 +96,7 @@
         
         This yields a map $U' \cross \R^n \to U' \cross \R^n$ with
         \[ \tilde{U} \cross \R^n \cong  \tilde{U} \cross \ball[\eps] \isomto \inv{\phi}(\tilde{U} \cross \ball[\eps]) \xto{f} U' \cross \R^n \sub U \cross \R^n \]
-        that is injective and fibre-preserving and therefore an open map (apply 1.).
+        that is injective and fiber-preserving and therefore an open map (apply 1.).
         It follows that $f: \inv{\phi}(\tilde{U} \cross \ball[\eps]) \to V'$ must be an open map as well since the other composing maps are homeomorphisms.
 
         By glueing the $\inv{\phi}(\tilde{U} \cross \ball[\eps])$ together over all $b \in B$, we see that $f$ is an open map.
