--- a/src/sections/induced/parts/composition.tex
+++ b/src/sections/induced/parts/composition.tex
@@ -20,7 +20,7 @@
 \begin{myproof}
     % foreword
     Again, we need to find a homeomorphism between a neighborhood of $i_1(A)$ and a neighborhood of $i_2(A)$
-    that commutes with injection and projection maps.
+    that commutes with the injection and projection maps.
     
     % homoemorphism
     Firstly, we compare the two total spaces:
