--- a/src/sections/induced/parts/cone.tex
+++ b/src/sections/induced/parts/cone.tex
@@ -115,18 +115,18 @@
 
     Let $[a, t] \in B \sqcup_f CA$ be arbitrary.
 
+    Note that the cone and the cylinder differ only
+    around an arbitrary small neighborhood of $[a, 1]$.
+
     % TODO: make the following part more rigorous
     % far away
     If $[a, t]$ is `far away' from the critical point $[a, 1]$,
-    say $t < \half$, we can simply take a local trivialization of $[a, t]$ in $\ind{r}\bb$
+    say $t \le \half$, we can simply take a local trivialization of $[a, t]$ in $\ind{r}\bb$
     to serve as a local trivialization of $[a, t]$ in $\bb'$,
     by restricting such a local trivialization to $A \times [0, \half)$ if necessary.
 
-    That is because the cone and the cylinder differ only
-    in an arbitrary small neighborhood of $[a, 1]$.
-
     % close
-    When a point is `close' to the critical point, say $t > \half$,
+    If $[a, t]$ is `close' to the critical point, say $t > \half$,
     we can take $\psi$ to be the homeomorphism for our local trivialization.
     By construction, $\psi$ respects the quotient $\pi: E(\ind{r}\bb) \subm E'$.
     It follows that $(\frst{\psi}(\pi(V)), \pi(V), \psi)$
