--- a/src/sections/microbundle/parts/definition.tex
+++ b/src/sections/microbundle/parts/definition.tex
@@ -1,6 +1,6 @@
 % definition
 \begin{mystatement}{definition}[microbundle]{microbundle::definition}[20]
-    A \defterm{microbundle} $\bb$ over $B$ (with \defterm{fibre dimension} $n$)
+    A \defterm{microbundle} $\bb$ over $B$ (with \defterm{fiber dimension} $n$)
     is a diagram $\bundle{B}{E}{i}{j}$ satisfying the following:
     \begin{enumerate}[(i)]
         \item $B$ is a topological space (\defterm{base space})
@@ -24,5 +24,5 @@
 % remark
 \begin{mystatement}{remark}{microbundle::dimension}
     In the following, unless explicitly stated otherwise,
-    we assume the fibre dimension of any given microbundle to be $n$.
+    we assume the fiber dimension of any given microbundle to be $n$.
 \end{mystatement}
