--- a/src/sections/microbundle/section.tex
+++ b/src/sections/microbundle/section.tex
@@ -1,7 +1,7 @@
 \begin{myparagraph}
-    This Chapter introduces the concept of microbundles
+    This section introduces the concept of microbundles
     together with some basic properties.
-    We define what a microbundle is, what it means for a microbundle to be trivial and 
+    We clarify what a microbundle is, what it means for a microbundle to be trivial and 
     cover some fundamental examples for microbundles.
 \end{myparagraph}
 \input{src/sections/microbundle/parts/definition}
