--- a/src/sections/suspension/parts/whitney.tex
+++ b/src/sections/suspension/parts/whitney.tex
@@ -1,7 +1,7 @@
 % definition
 \begin{mystatement}{definition}{suspension::whitney}
-    The \defterm{whitney sum} of two rooted microbundles $\bb$ and $\bb'$ over $B$
-    is the initial whitney sum $\whitney{\bb}{\bb'}$ together with the rooting
+    The \defterm{Whitney sum} of two rooted microbundles $\bb$ and $\bb'$ over $B$
+    is the initial Whitney sum $\whitney{\bb}{\bb'}$ together with the rooting
     \[ \germdef{\whitney{R}{R'}}{(\whitney{\bb}{\bb'})\restr{b_0}}{\whitney{\be[n_1]{b_0}}{\be[n_2]{b_0}} = \be[n_1 + n_1]{b_0}}. \]
 \end{mystatement}
 
