--- a/src/sections/suspension/section.tex
+++ b/src/sections/suspension/section.tex
@@ -1,5 +1,5 @@
 \begin{myparagraph}
-    In this chapter, we provide the proof for \myintref{whitney::bouqet}.
+    In this chapter, we provide the proof for \myintref{whitney::bouquet}.
     Along the way, we introduce `rooted-microbundles' which are
     microbundles with a little more structure, show a slightly sharper version of
     the Homotopy Theorem and study the wedge sum of two rooted microbundles.
