--- a/thesis.tex
+++ b/thesis.tex
@@ -26,8 +26,9 @@
 \chapter{Standard Constructions}\label{chapter::constructions}
 \begin{myparagraph}
     This chapter introduces two standard constructions for microbundles,
-    namely the `induced microbundle' and the `Whitney sum'.
-    These Constructions already exist for vector bundles and can be carried over immediately.
+    the `induced microbundle' and the `Whitney sum'.
+    These constructions already exist for vector bundles
+    and many results carry over immediatly its microbundle analogue.
 \end{myparagraph}
 % Document :: Constructions :: Induced
 \section{Induced Microbundles}\label{section::induced}
