--- a/src/sections/homotopy/parts/bundle.tex
+++ b/src/sections/homotopy/parts/bundle.tex
@@ -7,10 +7,10 @@
 
 % definition
 \begin{mystatement}{definition}[bundle-germ]{homotopy::bundle}
-    Let $\bb$ and $\bb'$ be two microbundles over $B$ and $B'$ with the same fibre dimension.
+    Let $\bb$ and $\bb'$ be two microbundles over $B$ and $B'$ with the same fiber dimension.
     A \defterm{bundle-germ} $\germdef{F}{\bb}{\bb'}$ is a map-germ
     \[ \germdef{F}{(E, B)}{(E', B')} \]
-    such that there exists a representative $f: U_f \to E'$ that maps each fibre $\inv{j}(b)$ injectively to a fibre $\inv{j'}(b')$.
+    such that there exists a representative $f: U_f \to E'$ that maps each fiber $\inv{j}(b)$ injectively to a fiber $\inv{j'}(b')$.
 \end{mystatement}
 
 % diagram
