--- a/src/sections/microbundle/parts/tangent.tex
+++ b/src/sections/microbundle/parts/tangent.tex
@@ -13,33 +13,37 @@
 
 % proof
 \begin{myproof}[that $\bt_M$ is a microbundle]
-    The maps $\Delta$ and $\pi_1$ are continuous and clearly $id_M = \pi_1 \circ \Delta$.
+    % continuity and compatibility
+    The maps $\Delta$ and $\pi_1$ are continuous and clearly $\pi_1 \circ \Delta = id_M$.
 
-    Let $p \in M$ be arbitrary and let $(U, \psi)$ be a chart over $p$.
-    Note that $U$ is an open neighborhood of $p$.
+    % local triviality
+    % local triviality :: homeomorphism
+    For an arbitrary $p \in M$,
+    choose a chart $(U, \psi)$ over $p$.
+    We have a local trivialization $(U, U \cross U, \phi)$ of $p$ in $\bt_M$ given by
+    \[ \phi: U \cross U \isomto U \cross \R^n \twith \phi(u, u') = (u, \psi(u) - \psi(u')). \]
+    Homeomorphy of $\phi$ follows from homeomorphy of $\psi$.
     
-    We have a local trivialization $(U, U \cross U, \phi)$ of $p$ in $\bt_M$ where
-    \[ \phi: U \cross U \isomto U \cross \R^n \twith \phi(u, u') := (u, \psi(u) - \psi(u')). \]
-    Homeomorphy of $\phi$ is given by homeomorphy of $\psi$
-    and $\phi$ commutes with the injection
+    % local triviality :: commutativity
+    Commutativity between the injection and $id \times 0$ is given by
     \[ \phi(\Delta(m)) = \phi(m, m) = (m, \psi(m) - \psi(m)) = (m, 0) = (id \cross 0)(m)\]
-    and projection maps
+    and between the projection and $\pi_1$ by
     \[ \pi_1(u, u') = u = \pi_1(u, \snd{\phi}(u, u')) = \pi_1(\phi(u, u')). \]
-    Note that $\snd{\phi}$ denotes the map on the second component of $\phi$,
-    i.e. $\pi_2 \circ \phi$.
+    Note that $\snd{\phi}$ denotes the map on
+    the second component of $\phi$, i.e. $\pi_2 \circ \phi$.
 \end{myproof}
 
 % remark
 \begin{mystatement}{remark}{microbundle::tangentdim}
-    The tangent microbundle $\bt_M$ has fibre dimension $d$.
+    The tangent microbundle $\bt_M$ has fiber dimension $d$.
 \end{mystatement}
 
 % afterword
-\begin{myparagraph}
-    The definition of the tangent microbundle
-    utilizes the fact that one can subtract two elements in euclidean space
-    by using a chart for $p$.
-    The constructed homeomorphy is hence dependant
-    of the chosen chart.
-    % TODO: explain tangent microbundle further
-\end{myparagraph}
+% \begin{myparagraph}
+%     The definition of the tangent microbundle
+%     utilizes the fact that one can subtract two elements in euclidean space
+%     by using a chart for $p$.
+%     The constructed homeomorphy is hence dependant
+%     of the chosen chart.
+%     % TODO: explain tangent microbundle further
+% \end{myparagraph}
