--- a/src/sections/whitney/parts/compatibility.tex
+++ b/src/sections/whitney/parts/compatibility.tex
@@ -1,29 +1,45 @@
-% lemma
-\begin{mystatement}{lemma}{whitney::compatibility}
-    Let $\bb_1$ and $\bb_1$ be two microbundles over $B$ and let $f: A \to B$ be a map.
-    The induced microbundle and the whitney sum are compatible, that is
-    \[ \ind{f}(\whitney{\bb_1}{\bb_2}) \cong \whitney{\ind{f}\bb_1}{\ind{f}\bb_2}. \]
-\end{mystatement}
+\begin{scope}
+    % defines
+    \newcommand{\wleft} {%
+        \ind{f} (\whitney{\bb_1}{\bb_2})%
+    }
+    \newcommand{\wright} {%
+        \whitney{\ind{f}\bb_1}{\ind{f}\bb_2}%
+    }
 
-% proof
-\begin{myproof}
-    From the definition of the induced microbundle and the whitney sum, we can explicitly write the total spaces
-    \[ E(\ind{f}(\whitney{\bb_1}{\bb_2})) \]
-    \[ = \{(a, (e_1, e_2)) \in A \cross (E(\bb_1) \cross E(\bb_2)) \mid j_1(e_1) = j_2(e_2) = f(a) \} \]
-    and
-    \[ E(\whitney{\ind{f}\bb_1}{\ind{f}\bb_2}) \]
-    \[ = \{(e_1, e_2) \in E(\ind{f}\bb_1) \cross E(\ind{f}\bb_2) \mid j_1(e_1) = j(e_2)\}\]
-    \[ = \{((a_1, e_1), (a_2, e_2)) \in (A \cross E(\bb_1)) \cross (A \cross E(\bb_2)) \mid \]
-    \[ j(a_1, e_1) = j(a_2, e_2) \land f(a_i) = j(e_i)\} \]
-    The two total spaces are homeomorphic via $\phi(a, (e_1, e_2)) := ((a, e_1), (a, e_2))$ with $\inv{\phi}((a, e_1), (a, e_2)) = (a, (e_1, e_2))$.
-    Homeomorphy of $\phi$ follows from the continuity of $\phi$ and $\inv{\phi}$, which is given since both $\phi$ and $\inv{\phi}$ are composed by identity maps.
-    
-    It remains to be shown that injection and projection maps $i$ and $j$ for $E(\ind{f}(\whitney{\bb_1}{\bb_2}))$
-    and $i'$ and $j'$ for $\whitney{\ind{f}\bb_1}{\ind{f}\bb_2}$ agree under $\phi$.
+    % lemma
+    \begin{mystatement}{lemma}{whitney::compatibility}
+        Let $\bb_1$ and $\bb_1$ be two microbundles over $B$ and let $f: A \to B$ be a map.
+        The induced microbundle and the Whitney sum are compatible, that is
+        \begin{center}
+            $\wleft \cong \wright$.
+        \end{center}
+    \end{mystatement}
 
-    This follows from
-    \[ \phi(i(a)) = \phi(a, i_1(f(a)), i_2(f(a))) \]
-    \[ = ((a, i_1(f(a))), (a, i_2(f(a)))) = (i_1'(a), i_2'(a)) = i'(a) \]
-    and
-    \[ j(a, e_1, e_2) = a = j'((a, e_1), (a, e_2)) = j'(\phi(a, e_1, e_2)). \]
-\end{myproof}
+    % proof
+    \begin{myproof}
+        % total space
+        The total space $E(\wleft)$ is of the form
+        \[ \{(a, (e_1, e_2)) \in A \cross (E(\bb_1) \cross E(\bb_2)) \mid j_1(e_1) = j_2(e_2) = f(a) \} \]
+        and $E(\wright)$ is of the form
+        \[ \set{((a_1, e_1), (a_2, e_2)) \in E(\ind{f}\bb_1) \cross E(\ind{f}\bb_2)}{j_1(a_1, e_1) = j(a_2, e_2)}. \]
+
+        % homeomorphism
+        We have a homeomorphsim $\phi: E(\wleft) \isomto E(\wright)$ with
+        \[ \phi(a, (e_1, e_2)) = ((a, e_1), (a, e_2)) \]
+        and its inverse
+        \[ \inv{\phi}((a, e_1), (a, e_2)) = (a, (e_1, e_2)). \]
+        The two total spaces are homeomorphic via
+        $\phi(a, (e_1, e_2)) := ((a, e_1), (a, e_2))$ with $\inv{\phi}((a, e_1), (a, e_2)) = (a, (e_1, e_2))$.
+        Homeomorphy of $\phi$ follows from the continuity of $\phi$ and $\inv{\phi}$,
+        which is given since both $\phi$ and $\inv{\phi}$ are composed by identity maps.
+        
+        % commutativity
+        Commutativity between the injection maps is given by
+        \[ \phi(i_f(a)) = \phi(a, (i_1(f(a)), i_2(f(a)))) = ((a, i_1(f(a))), (a, i_2(f(a)))) = i_\oplus(a) \]
+        and between the projection maps by
+        \[ j_f(a, (e_1, e_2)) = a = j_\oplus((a, e_1), (a, e_2)) = j_\oplus(\phi(a, (e_1, e_2))), \]
+        where $i_f$ and $j_f$ denote the injection and projection for $\wleft$
+        and $i_\oplus$ and $j_\oplus$ denote the injection and projection for $\wright$.
+    \end{myproof}
+\end{scope}
